[gd_scene load_steps=6 format=1]

[ext_resource path="res://title_screen.png" type="Texture" id=1]
[ext_resource path="res://main_menu.gd" type="Script" id=2]
[ext_resource path="res://play.tex" type="Texture" id=3]
[ext_resource path="res://credits.tex" type="Texture" id=4]
[ext_resource path="res://rate.tex" type="Texture" id=5]

[node name="TextureFrame" type="TextureFrame"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
texture = ExtResource( 1 )
stretch_mode = 0
script/script = ExtResource( 2 )

[node name="PlayButton" type="TextureButton" parent="."]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 113.0
margin/top = 314.0
margin/right = -116.0
margin/bottom = 424.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
params/resize_mode = 0
params/scale = Vector2( 0.7, 0.7 )
params/stretch_mode = 0

[node name="CreditsButton" type="TextureButton" parent="."]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 177.0
margin/top = 441.0
margin/right = -163.2
margin/bottom = 558.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 0
params/scale = Vector2( 0.7, 0.7 )
params/stretch_mode = 0

[node name="RateButton" type="TextureButton" parent="."]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 113.0
margin/top = 573.0
margin/right = -116.0
margin/bottom = 683.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
params/resize_mode = 0
params/scale = Vector2( 0.7, 0.7 )
params/stretch_mode = 0


